<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:background="@color/white"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".activities.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_24sdp"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"/>

        <FrameLayout
            android:id="@+id/layoutImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageProfile"
                android:layout_width="@dimen/_82sdp"
                android:layout_height="@dimen/_82sdp"
                android:background="@drawable/background_image"
                android:scaleType="centerCrop"/>

            <TextView
                android:id="@+id/textAddImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_image"
                android:layout_gravity="center"
                android:textSize="@dimen/_11sdp"
                android:textStyle="bold"
                android:textColor="@color/secondary_text"/>
        </FrameLayout>

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/background_input"
            android:layout_marginTop="@dimen/_20sdp"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_14sdp"
            android:textColorHint="#7E7D7D"
            android:inputType="text"
            android:textStyle="normal"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="@dimen/_15sdp" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/background_input"
            android:layout_marginTop="@dimen/_12sdp"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_14sdp"
            android:textColorHint="#7E7D7D"
            android:inputType="textEmailAddress"
            android:textStyle="normal"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="@dimen/_15sdp" />


        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/background_input"
            android:layout_marginTop="@dimen/_12sdp"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:textStyle="normal"
            android:importantForAutofill="no"
            android:paddingStart="@dimen/_16sdp"
            android:inputType="textPassword"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_14sdp"
            android:textColorHint="#7E7D7D"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="@dimen/_15sdp" />


        <EditText
            android:id="@+id/inputConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/background_input"
            android:layout_marginTop="@dimen/_12sdp"
            android:hint="@string/confirm_password"
            android:imeOptions="actionDone"
            android:textStyle="bold"
            android:importantForAutofill="no"
            android:paddingStart="@dimen/_16sdp"
            android:inputType="textPassword"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_14sdp"
            android:textColorHint="#7E7D7D"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="@dimen/_15sdp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:animateLayoutChanges="true">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSignUp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:text="@string/create_account"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_8sdp"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="invisible"
                />
        </FrameLayout>




        <TextView
            android:id="@+id/textSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/sign_into_existing_account"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"/>
    </LinearLayout>

</ScrollView>